--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch encry",
+            "request": "launch",
+            "mainClass": "Java.encry",
+            "projectName": "Japy_5cec3b65"
+        },
+        {
+            "type": "java",
+            "name": "Launch run",
+            "request": "launch",
+            "mainClass": "Java.run",
+            "projectName": "Japy_5cec3b65"
+        },
+        {
+            "type": "java",
             "name": "Launch messInterface",
             "request": "launch",
             "mainClass": "Java.messInterface",
