--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "src/json-simple-2.1.2.jar",
         "src/gson-2.9.1.jar",
         "src/json-20220320.jar",
-        "src\\json-20220924.jar"
+        "src\\json-20220924.jar",
+        "src/json-20220924.jar"
     ]
 }
